--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,5 +38,6 @@
 @import './components/_zigzag-container.scss';
 @import './components/_card.scss';
 @import './components/_button-slider.scss';
+@import './components/_circle-box.scss';
 
 @import './components/_case-study.scss';
