--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,17 @@ footer.footer {
   opacity: 1;
   transition: opacity 1s ease-in-out; }
 
+@media only screen and (max-width: 75em) {
+  .u-tab-land-center {
+    text-align: center !important; } }
+
+.u-clearfix {
+  display: block;
+  clear: both; }
+
+.u-min-height-12 {
+  min-height: 12rem; }
+
 @keyframes spin {
   0% {
     transform: translateX(0); }
@@ -1115,6 +1126,7 @@ footer.footer {
     font-size: 1.6rem !important; } }
 
 .section-brief {
+  overflow: hidden;
   padding: 10rem 15rem;
   padding-top: 14rem;
   background-color: #FFF7E1; }
@@ -1179,6 +1191,296 @@ footer.footer {
     left: 0;
     z-index: 10;
     transform: translateY(99%); }
+
+.case-studies--pixel .section-gallery {
+  background-color: #FFF7E1; }
+  .case-studies--pixel .section-gallery .gallery-case {
+    max-width: 90vw;
+    margin: 0 auto; }
+    .case-studies--pixel .section-gallery .gallery-case__left, .case-studies--pixel .section-gallery .gallery-case__right {
+      width: 49%; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--pixel .section-gallery .gallery-case__left, .case-studies--pixel .section-gallery .gallery-case__right {
+          width: 100%;
+          float: none; } }
+    .case-studies--pixel .section-gallery .gallery-case__left {
+      float: left; }
+    .case-studies--pixel .section-gallery .gallery-case__right {
+      float: right; }
+    .case-studies--pixel .section-gallery .gallery-case__full {
+      clear: both;
+      width: 100%;
+      margin-top: 2%; }
+    .case-studies--pixel .section-gallery .gallery-case::after {
+      clear: both;
+      display: inline-block;
+      content: ''; }
+    .case-studies--pixel .section-gallery .gallery-case__image {
+      width: 100%;
+      height: auto;
+      object-position: center; }
+    .case-studies--pixel .section-gallery .gallery-case__item {
+      margin-top: 2%; }
+
+.case-studies--name-your-price .section-gallery {
+  background-color: #FFF7E1; }
+  .case-studies--name-your-price .section-gallery .gallery-case {
+    max-width: 90vw;
+    margin: 0 auto; }
+    .case-studies--name-your-price .section-gallery .gallery-case__left, .case-studies--name-your-price .section-gallery .gallery-case__right {
+      width: 49%; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--name-your-price .section-gallery .gallery-case__left, .case-studies--name-your-price .section-gallery .gallery-case__right {
+          width: 100%;
+          float: none; } }
+    .case-studies--name-your-price .section-gallery .gallery-case__left {
+      float: left; }
+    .case-studies--name-your-price .section-gallery .gallery-case__right {
+      float: right; }
+    .case-studies--name-your-price .section-gallery .gallery-case__full {
+      clear: both;
+      width: 100%;
+      margin-top: 2%; }
+    .case-studies--name-your-price .section-gallery .gallery-case::after {
+      clear: both;
+      display: inline-block;
+      content: ''; }
+    .case-studies--name-your-price .section-gallery .gallery-case__image {
+      width: 100%;
+      height: auto;
+      object-position: center; }
+    .case-studies--name-your-price .section-gallery .gallery-case__item {
+      margin-top: 2%; }
+
+.case-studies--ian-bick .section-gallery {
+  background-color: #FFF7E1; }
+  .case-studies--ian-bick .section-gallery .gallery-case {
+    max-width: 90vw;
+    margin: 0 auto; }
+    .case-studies--ian-bick .section-gallery .gallery-case__left, .case-studies--ian-bick .section-gallery .gallery-case__right {
+      width: 49%; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--ian-bick .section-gallery .gallery-case__left, .case-studies--ian-bick .section-gallery .gallery-case__right {
+          width: 100%;
+          float: none; } }
+    .case-studies--ian-bick .section-gallery .gallery-case__left {
+      float: left; }
+    .case-studies--ian-bick .section-gallery .gallery-case__right {
+      float: right; }
+    .case-studies--ian-bick .section-gallery .gallery-case__full {
+      clear: both;
+      width: 100%;
+      margin-top: 2%; }
+    .case-studies--ian-bick .section-gallery .gallery-case::after {
+      clear: both;
+      display: inline-block;
+      content: ''; }
+    .case-studies--ian-bick .section-gallery .gallery-case__image {
+      width: 100%;
+      height: auto;
+      object-position: center; }
+    .case-studies--ian-bick .section-gallery .gallery-case__item {
+      margin-top: 2%; }
+
+.case-studies--kreekcraft .section-gallery {
+  background-color: #FFF7E1; }
+  .case-studies--kreekcraft .section-gallery--banner {
+    max-width: 90vw;
+    margin: 0 auto;
+    margin-bottom: 8rem; }
+    .case-studies--kreekcraft .section-gallery--banner-image {
+      width: 100%; }
+  .case-studies--kreekcraft .section-gallery .gallery-case {
+    max-width: 70vw;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem; }
+    @media only screen and (max-width: 56.25em) {
+      .case-studies--kreekcraft .section-gallery .gallery-case {
+        max-width: 90vw; } }
+    .case-studies--kreekcraft .section-gallery .gallery-case__row {
+      display: flex; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--kreekcraft .section-gallery .gallery-case__row {
+          flex-direction: column; } }
+      .case-studies--kreekcraft .section-gallery .gallery-case__row--3-items {
+        align-items: stretch;
+        justify-content: space-between;
+        gap: 1.5rem; }
+        .case-studies--kreekcraft .section-gallery .gallery-case__row--3-items .gallery-case__item {
+          flex-basis: calc(1/3*100%); }
+          @media only screen and (max-width: 37.5em) {
+            .case-studies--kreekcraft .section-gallery .gallery-case__row--3-items .gallery-case__item {
+              flex-basis: 100%; } }
+      .case-studies--kreekcraft .section-gallery .gallery-case__row--2-items {
+        align-items: stretch;
+        justify-content: space-between;
+        gap: 1.5rem; }
+        .case-studies--kreekcraft .section-gallery .gallery-case__row--2-items .gallery-case__item {
+          flex-basis: calc(1/2*100%); }
+          @media only screen and (max-width: 37.5em) {
+            .case-studies--kreekcraft .section-gallery .gallery-case__row--2-items .gallery-case__item {
+              flex-basis: 100%; } }
+      .case-studies--kreekcraft .section-gallery .gallery-case__row--1-items {
+        display: block; }
+        .case-studies--kreekcraft .section-gallery .gallery-case__row--1-items .galler-case__item {
+          width: 100%; }
+    .case-studies--kreekcraft .section-gallery .gallery-case__image {
+      width: 100%;
+      height: 100%; }
+    .case-studies--kreekcraft .section-gallery .gallery-case__video {
+      width: 100%;
+      display: block; }
+
+.case-studies--florida-mayhem .section-gallery {
+  margin-top: -2%;
+  background-color: #FFF7E1; }
+  .case-studies--florida-mayhem .section-gallery .gallery-case {
+    max-width: 90vw;
+    margin: 0 auto; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__left {
+      float: left;
+      width: 56%; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__right {
+      float: right;
+      width: 42.5%; }
+    @media only screen and (max-width: 37.5em) {
+      .case-studies--florida-mayhem .section-gallery .gallery-case__left, .case-studies--florida-mayhem .section-gallery .gallery-case__right {
+        width: 100%;
+        float: none; } }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__full {
+      clear: both;
+      width: 100%;
+      margin-top: 2%; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__image {
+      width: 100%;
+      height: auto;
+      object-position: center; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__item {
+      margin-top: 2%; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__video {
+      width: 100%; }
+    .case-studies--florida-mayhem .section-gallery .gallery-case__flex-3-items {
+      display: flex;
+      justify-content: space-between;
+      gap: 1.5rem; }
+      .case-studies--florida-mayhem .section-gallery .gallery-case__flex-3-items .gallery-case__item {
+        flex-basis: calc(1/3*100%); }
+        @media only screen and (max-width: 37.5em) {
+          .case-studies--florida-mayhem .section-gallery .gallery-case__flex-3-items .gallery-case__item {
+            flex-basis: 100%; } }
+      .case-studies--florida-mayhem .section-gallery .gallery-case__flex-3-items .gallery-case__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--florida-mayhem .section-gallery .gallery-case__flex-3-items {
+          flex-direction: column; } }
+
+.case-studies--reactiv .col-1-of-2 {
+  float: left;
+  width: calc((100% - 1rem) / 2); }
+  .case-studies--reactiv .col-1-of-2:not(:first-child) {
+    margin-left: 1rem; }
+
+.case-studies--reactiv .col-1-of-3 {
+  float: left;
+  width: calc((100% - 2 * 1rem) / 3); }
+  .case-studies--reactiv .col-1-of-3:not(:first-child) {
+    margin-left: 1rem; }
+  .case-studies--reactiv .col-1-of-3--small {
+    width: calc((86% - 2 * 1rem) / 3); }
+  .case-studies--reactiv .col-1-of-3--right {
+    float: right; }
+  @media only screen and (max-width: 37.5em) {
+    .case-studies--reactiv .col-1-of-3 {
+      width: 100%;
+      float: none; }
+      .case-studies--reactiv .col-1-of-3:not(:first-child) {
+        margin-left: 0rem; } }
+
+.case-studies--reactiv .section-gallery {
+  background-color: #FFF7E1; }
+  .case-studies--reactiv .section-gallery .gallery-case {
+    max-width: 80vw;
+    margin: 0 auto; }
+    .case-studies--reactiv .section-gallery .gallery-case__left, .case-studies--reactiv .section-gallery .gallery-case__right {
+      width: 49%; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--reactiv .section-gallery .gallery-case__left, .case-studies--reactiv .section-gallery .gallery-case__right {
+          width: 100%;
+          float: none; } }
+    .case-studies--reactiv .section-gallery .gallery-case__image {
+      width: 100%; }
+      .case-studies--reactiv .section-gallery .gallery-case__image--small-center {
+        display: inline-block;
+        width: 60%; }
+        @media only screen and (max-width: 75em) {
+          .case-studies--reactiv .section-gallery .gallery-case__image--small-center {
+            width: 70%; } }
+      .case-studies--reactiv .section-gallery .gallery-case__image--small-center-margin-top {
+        width: 60%;
+        margin-top: 2rem;
+        display: inline-block; }
+    .case-studies--reactiv .section-gallery .gallery-case__row:not(:last-child):not(:first-child) {
+      margin-top: 2rem; }
+    .case-studies--reactiv .section-gallery .gallery-case__row::after {
+      content: '';
+      display: block;
+      clear: both; }
+    .case-studies--reactiv .section-gallery .gallery-case__row--flex {
+      display: flex; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--reactiv .section-gallery .gallery-case__row--flex {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center; } }
+      .case-studies--reactiv .section-gallery .gallery-case__row--flex .col-1-of-2 {
+        float: none; }
+        @media only screen and (max-width: 37.5em) {
+          .case-studies--reactiv .section-gallery .gallery-case__row--flex .col-1-of-2 {
+            width: 100%; } }
+      .case-studies--reactiv .section-gallery .gallery-case__row--flex > * {
+        margin-bottom: 8rem; }
+    .case-studies--reactiv .section-gallery .gallery-case__row--wide-image .gallery-case__image {
+      height: 100%;
+      width: auto; }
+    .case-studies--reactiv .section-gallery .gallery-case__item {
+      margin-top: 2%; }
+      .case-studies--reactiv .section-gallery .gallery-case__item--flex-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem; }
+        @media only screen and (max-width: 37.5em) {
+          .case-studies--reactiv .section-gallery .gallery-case__item--flex-column {
+            flex-direction: row;
+            justify-content: space-between; } }
+    .case-studies--reactiv .section-gallery .gallery-case__flex-3-items {
+      max-width: 80vw;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      gap: 1.5rem; }
+      .case-studies--reactiv .section-gallery .gallery-case__flex-3-items .gallery-case__item {
+        flex-basis: calc(1/3*100%); }
+        @media only screen and (max-width: 37.5em) {
+          .case-studies--reactiv .section-gallery .gallery-case__flex-3-items .gallery-case__item {
+            flex-basis: 100%; } }
+      .case-studies--reactiv .section-gallery .gallery-case__flex-3-items .gallery-case__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top; }
+      @media only screen and (max-width: 37.5em) {
+        .case-studies--reactiv .section-gallery .gallery-case__flex-3-items {
+          flex-direction: column; } }
+  @media only screen and (max-width: 37.5em) {
+    .case-studies--reactiv .section-gallery .circle-box {
+      transform: translateY(1rem); } }
 
 .portfolio .header {
   overflow: visible;
@@ -2447,9 +2749,10 @@ footer.footer {
   background-color: #00A979;
   color: #FFF;
   padding: 0 2rem;
-  visibility: hidden;
-  display: none;
   transition: transform 0.5s, visibility .5s; }
+  .quote--hidden {
+    visibility: hidden;
+    display: none; }
   .quote--orange {
     background-color: #fa492d; }
   .quote--round {
@@ -2891,6 +3194,26 @@ footer.footer {
     .button-slider__button--selected {
       border: 2px solid transparent;
       background-color: #fa492d; }
+
+.circle-box__item {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%; }
+  @media only screen and (max-width: 37.5em) {
+    .circle-box__item {
+      width: 4rem;
+      height: 4rem; } }
+
+.circle-box__row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem; }
+  .circle-box__row:not(:last-child) {
+    margin-bottom: 2rem; }
+  @media only screen and (max-width: 75em) {
+    .circle-box__row {
+      gap: 2rem; } }
 
 .case-study {
   background-color: #fa492d;
