--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -185,3 +185,15 @@
     opacity:1;
     transition: opacity 1s ease-in-out;
 }
+.u-tab-land-center{
+    @include respond('tab-land'){
+        text-align: center !important;
+    }
+}
+.u-clearfix{
+    display: block;
+    clear:both;
+}
+.u-min-height-12{
+    min-height: 12rem;
+}
