--- a/css/style.css
+++ b/css/style.css
@@ -3095,7 +3095,8 @@ footer.footer {
     letter-spacing: 4px;
     padding: 0.7rem 2rem 0.7rem 2.4rem;
     width: auto;
-    transition: background-color .2s; }
+    transition: background-color .2s;
+    text-decoration: none; }
     .zigzag-container__button:hover {
       background-color: #2f2c96; }
     @media only screen and (max-width: 56.25em) {
