--- a/sass/components/_zigzag-container.scss
+++ b/sass/components/_zigzag-container.scss
@@ -111,6 +111,7 @@
         padding: 0.7rem 2rem 0.7rem 2.4rem;
         width:auto;
         transition:background-color .2s;
+        text-decoration: none;
         
         &:hover{
             background-color: $color-purple;
