--- a/css/style.css
+++ b/css/style.css
@@ -1146,8 +1146,8 @@ footer.footer {
       padding: 5rem 2rem; } }
   .section-brief__orange-wave {
     position: absolute;
-    top: -1rem;
-    left: 0; }
+    top: 0rem;
+    left: 0rem; }
     .section-brief__orange-wave--img {
       width: 110%;
       height: auto; }
