--- a/sass/pages/_case-studies.scss
+++ b/sass/pages/_case-studies.scss
@@ -56,8 +56,8 @@
     }
     &__orange-wave{
         position: absolute;
-        top:-1rem;
-        left:0;
+        top:0rem;
+        left:0rem;
 
         &--img{
             width: 110%;
