--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -11,17 +11,17 @@
     }
     .section-portfolios{
         position:relative;
-        padding:20rem 15rem 0 15rem;
+        padding:20rem 15rem 15rem 15rem;
         background-color: $color-light;
 
         @include respond('big-laptop'){
-            padding:20rem 10rem 0 10rem;
+            padding:20rem 10rem 15rem 10rem;
         }
         @include respond('tab-port'){
-            padding:16rem 2rem 0 2rem;
+            padding:16rem 2rem 12rem 2rem;
         }
         @include respond('phone'){
-            padding:14rem 2rem 0 2rem;
+            padding:14rem 2rem 12rem 2rem;
         }
 
 
