--- a/sass/pages/_case-studies.scss
+++ b/sass/pages/_case-studies.scss
@@ -174,6 +174,7 @@
 // -------------------------------------------- NYP -- is in standard
 .case-studies--name-your-price{
     .section-gallery{
+        margin-top:-2%;
         background-color: $color-light;
         .gallery-case{
             max-width: 90vw;
