--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,6 +9,20 @@
     }
 }
 
+.header{
+
+    // #middleline{
+    //     display:inline-block;
+    //     @media only screen and (max-width:1200px){
+    //         min-width: 28rem;
+    //     }
+    //     @include respond('phone'){
+    //         min-width: 20rem;
+    //     }
+
+    // }
+}
+
 .section-projects{
     background-color: $color-light;
     padding-top:8rem;
