--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -14,6 +14,7 @@
         color:inherit;
         font-size:$text-med-small;
         letter-spacing:1.5px;
+        line-height: $line-height-8;
     }
 
     &__item{
