--- a/sass/components/_zigzag-container.scss
+++ b/sass/components/_zigzag-container.scss
@@ -90,7 +90,7 @@
 
     &__title{
         font-family: 'helvetica';
-        font-size:$text-small-big;
+        font-size:$text-helvetica-mid;
     }
     &__client{
         font-size:$text-h1-sm;
