--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,45 +7,43 @@ $color-purple-transparent: rgba(47, 44, 150, 0.356);
 $color-black-transparent: rgba(0, 0, 0, 0.466);
 $color-black-transparent-text: rgba(35, 36, 39, 0.40);
 $color-light-transparent: #fff7e1b7;
-
 $color-white:#FFF;
 
-$text-small-min: 1.6rem;
-
-$text-med-small:2.4rem;
-$text-med: 3rem;
-$text-min:1.8rem;
-$text-small-med: 1.6rem;
-$text-small-min: 1.6rem;
-$text-med-small:2.4rem;
-$text-med: 3rem;
-
+//////////////////////////////////////
+/// Fonts for Helvetica family
+//////////////////////////////////////
+$text-helvetica-small-med:1.3rem;
+$text-helvetica-small-small-med-med:1.8rem;
+$text-helvetica-mid:2.2rem;
+$text-helvetica-small-med-med-med:2rem;
+$text-helvetica-small-med-med:1.6rem;
+$text-helvetica-med:2.8rem;
 
 //////////////////////////////////////
-//used on - text--top
-$text-small-min:1.2rem;
-//used on - gallery__text
-$text-small-med:1.3rem;
-//used on - content-items__text
-$text-small-med-med:1.6rem;
-$text-small-med-med-med: 1.8rem;
-//used on - navigation; footer__link&__text; gallery__description; section-projects__button; content-items__description
-$text-small:2rem;
-$text-small-big:2.2rem;
-//used on - text--main; offerings_link
-$text-med-small:2.4rem;
-//used on - case study heading; 
-$text-med-med:2.6rem;
-//used on - h-3;
-$text-med:2.8rem;
+/// Fonts for Morganite family
+//////////////////////////////////////
+$text-min-min-min: 2.8rem; 
+$text-min-min: 3rem;                //modified;used as new
+$text-min:3.4rem;               //modified
+$text-small-min:2rem;                   //modified
+$text-small-med:2.35rem;                   //modified
+$text-small-med-med:3.6rem;               //modified
+$text-small:3.6rem;                               // modified
+$text-small-med-med-med: 3.8rem;                 // modified
+$text-small-big:3.9rem;                             // modified
+$text-med-small:4rem;                           //modified
+$text-med-med:4.6rem;
+$text-med:4.8rem;                           //modified
 
-$text-large:3.2rem;
+$text-large:6.2rem;                //modified
 
-$text-h1: 7rem;
-$text-h2-sm:4rem;
-$text-h2-med:4.5rem;
-$text-h2:5rem;
-$text-h1-sm: 6.1rem;
+$text-h1: 12.6rem;                //modified
+$text-h2-sm:7rem;                           //modified
+$text-h2-med:8.2rem;                       //modified
+$text-h2:9rem;                           //modified
+$text-h1-sm: 11rem;                           //modified
+
+$line-height-8:80%;
  
 $z-default-layer:0;
 $z-background-layer:10;
