--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -3,7 +3,7 @@
     src:url(../fonts/Morganite-Black.woff) format('woff');
     font-style: normal;
     font-weight: normal;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 
@@ -12,7 +12,7 @@
     src:url(../fonts/Morganite-BlackItalic.woff) format('woff');
     font-style: italic;
     font-weight: bold;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 @font-face{
@@ -20,7 +20,7 @@
     src: url(../fonts/Morganite-Bold.woff) format('woff');
     font-style: italic;
     font-weight: bold;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 
@@ -29,7 +29,7 @@
     src:url(../fonts/Morganite-BoldItalic.woff) format('woff');
     font-style: italic;
     font-weight: bold;
-    size-adjust: 180%
+    //size-adjust: 180%
     
   
 }
@@ -38,7 +38,7 @@
     src: url(../fonts/Morganite-Light.woff) format('woff');
     font-style: normal;
     font-weight: normal;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 @font-face{
@@ -46,7 +46,7 @@
     src:url(../fonts/Morganite-LightItalic.woff) format('woff');
     font-style: italic;
     font-weight: normal;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 @font-face{
@@ -54,7 +54,7 @@
     src:url(../fonts/Morganite-Medium.woff) format('woff');
     font-style: normal;
     font-weight: normal;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 
@@ -63,7 +63,7 @@
     src:url(../fonts/Morganite-MediumItalic.woff) format('woff');
     font-style: italic;
     font-weight: normal;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
 
@@ -72,6 +72,15 @@
     src:url(../fonts/Morganite-Thin.woff) format('woff');
     font-style: normal;
     font-weight: 100;
-    size-adjust: 180%
+    //size-adjust: 180%
     
 }
+
+// @font-face{
+//     font-family: 'Morganite';
+//     src:url(../fonts/Morganite-Black.ttf) format('truetype');
+//     font-style: normal;
+//     font-weight: 100;
+//     size-adjust: 100%
+    
+// }
