--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -54,7 +54,7 @@
     font-family: 'helvetica' !important;
     letter-spacing: 1px !important;
     font-weight: 400 !important;
-    font-size:1.8rem !important;
+    font-size:$text-helvetica-small-small-med-med !important;
 } 
 .u-center-div{
     margin:0 auto !important;
