--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -34,6 +34,7 @@ $text-small-big:3.9rem;                             // modified
 $text-med-small:4rem;                           //modified
 $text-med-med:4.6rem;
 $text-med:4.8rem;                           //modified
+$text-large-med:5.8rem;
 $text-large:6.2rem;                //modified
 $text-h2-sm:7rem;                           //modified
 $text-h2-med:8.2rem;                       //modified
