--- a/sass/components/_quote.scss
+++ b/sass/components/_quote.scss
@@ -114,7 +114,7 @@
         }
     }
     &__quotee{
-        font-size:$text-large;
+        font-size:$text-large-med;
         letter-spacing: 3px;
         padding-top:1rem;
         @include respond('tab-land'){
