--- a/sass/pages/_case-studies.scss
+++ b/sass/pages/_case-studies.scss
@@ -130,7 +130,7 @@
     .section-gallery{
         background-color: $color-light;
         .gallery-case{
-            max-width: 90vw;
+            max-width: 80vw;
             margin:0 auto;
             &__left,
             &__right{
@@ -175,7 +175,7 @@
         margin-top:-2%;
         background-color: $color-light;
         .gallery-case{
-            max-width: 90vw;
+            max-width: 80vw;
             margin:0 auto;
             &__left,
             &__right{
@@ -220,7 +220,7 @@
     .section-gallery{
         background-color: $color-light;
         .gallery-case{
-            max-width: 90vw;
+            max-width: 80vw;
             margin:0 auto;
             &__left,
             &__right{
@@ -338,11 +338,22 @@
 // -------------------------------------------- MAYHEM
 
 .case-studies--florida-mayhem{
+    #controlled-gallery-row{
+        img{
+            max-height: 63rem;
+        }
+        @include respond('phone'){
+            img{
+                max-height: initial;
+                height: auto;
+            }
+        }
+    }
     .section-gallery{
         margin-top:-2%;
         background-color: $color-light;
         .gallery-case{
-            max-width: 90vw;
+            max-width: 80vw;
             margin:0 auto;
 
             &__left{
@@ -415,6 +426,18 @@
 
 // -------------------------------------------- REACTIV 
 .case-studies--reactiv{
+    #controlled-gallery-row{
+        img{
+            max-height: 50rem;
+        }
+        @include respond('phone'){
+            img{
+                max-height: initial;
+                height: auto;
+            }
+        }
+    }
+
     .col-1-of-2{
         float:left;
         width:calc((100% - 1rem) / 2);
@@ -527,9 +550,13 @@
                         max-width: 80vw;
                         margin:0 auto;
                         display:flex;
-                        //align-items: stretch;
                         justify-content: space-between;
-                        gap:1.5rem;
+                        align-items: stretch;
+                        &>*{
+                            &:not(:first-child){
+                                margin-left:1.5rem;
+                            }
+                        }
     
                         .gallery-case{
                             &__item{
@@ -542,14 +569,30 @@
                             &__image{
                                 width: 100%;
                                 height: 100%;
-                                object-fit: cover;
+                                object-fit: contain;
                                 object-position: top;
+                                @include respond('tab-land'){
+                                    object-fit: cover;
+                                }
+                                @include respond('phone'){
+                                    object-fit:contain;
+                                }
+                                
                             }
+                            
                         }
                         
                         @include respond('phone'){
                             flex-direction: column;
                         }
+                }
+            }
+            .gallery-case__item.gallery-case__item--3 
+            img.gallery-case__image{
+                object-fit: cover;
+                object-position: center;
+                @include respond('phone'){
+                    object-fit:contain;
                 }
             }
         }
