--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -144,6 +144,9 @@
         @include respond('big-laptop'){
             margin-left:10rem;
         }
+        @include respond('laptop'){
+            min-width: 27rem;
+        }
         @include respond('tab-land'){
             max-width: none;
             padding-bottom:5rem;
